--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,94 @@
-#devops
-black==22.3.0
-click==8.1.3 
-pytest==7.1.3
+appnope==0.1.2
+argon2-cffi==21.1.0
+astroid==2.15.1
+attrs==21.2.0
+backcall==0.2.0
+bleach==4.1.0
+cffi==1.14.6
+click==8.1.3
+coverage==7.2.2
+cycler==0.11.0
+debugpy==1.4.3
+decorator==5.1.0
+defusedxml==0.7.1
+dill==0.3.6
+entrypoints==0.3
+exceptiongroup==1.1.1
+Flask==2.2.3
+importlib-metadata==6.0.0
+iniconfig==2.0.0
+ipykernel==6.4.1
+ipython==7.28.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.5
+isort==5.12.0
+itsdangerous==2.1.2
+jedi==0.18.0
+Jinja2==3.0.1
+joblib==1.1.0
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==7.0.4
+jupyter-console==6.4.0
+jupyter-core==4.8.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.2
+kiwisolver==1.3.2
+lazy-object-proxy==1.9.0
+Markdown==3.4.1
+MarkupSafe==2.1.2
+matplotlib==3.4.3
+matplotlib-inline==0.1.3
+mccabe==0.7.0
+mistune==0.8.4
+nbclient==0.5.4
+nbconvert==6.2.0
+nbformat==5.1.3
+nest-asyncio==1.5.1
+notebook==6.4.4
+numpy==1.21.0
+opencv-python==4.6.0.66
+packaging==21.0
+pandas==1.3.4
+pandocfilters==1.5.0
+parso==0.8.2
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.3.2
+platformdirs==3.2.0
+pluggy==1.0.0
+prometheus-client==0.11.0
+prompt-toolkit==3.0.20
+ptyprocess==0.7.0
+pycparser==2.20
+Pygments==2.10.0
+pylint==2.17.1
+pyparsing==2.4.7
+pyrsistent==0.18.0
+pytest==7.2.2
 pytest-cov==4.0.0
-pylint==2.15.3
-boto3==1.24.87
-#web
-fastapi==0.85.0
-uvicorn==0.18.3
-
-
-
+python-dateutil==2.8.2
+pytz==2021.3
+pyzmq==22.3.0
+qtconsole==5.1.1
+QtPy==1.11.2
+scikit-learn==1.0.1
+scipy==1.7.2
+Send2Trash==1.8.0
+six==1.16.0
+terminado==0.12.1
+testpath==0.5.0
+threadpoolctl==3.0.0
+tomli==2.0.1
+tomlkit==0.11.7
+torch==1.10.0
+torchvision==0.11.1
+tornado==6.1
+traitlets==5.1.0
+typing_extensions==4.0.1
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==2.2.3
+widgetsnbextension==3.5.1
+wrapt==1.15.0
+zipp==3.12.1
